--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "ethers": "^5.1.0",
     "hardhat": "^2.1.2",
     "node-fetch": "^2.6.1"
+  },
+  "dependencies": {
+    "bignumber.js": "^9.0.1"
   }
 }
